--- a/base/.project
+++ b/base/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>BookManagement_Bubblyyi</name>
+	<name>SpringBoot-base-system</name>
 	<comment></comment>
 	<projects>
 	</projects>
