增加备忘记录删除

--- a/base/src/main/resources/application.properties
+++ b/base/src/main/resources/application.properties
@@ -45,11 +45,13 @@ spring.datasource.cluster.useGlobalDataSourceStat=true
 spring.jpa.show-sql=true
 spring.jpa.properties.jadira.usertype.autoRegisterUserTypes=true
 #create 等等只对jpa有效
-#jpa自动根据注解生成表并使用import.sql文件导入测试数据 springboot 使用data.sql初始化数据，schemea.sql初始化表格,默认是classpath下，sql文件下的是备份，不起作用
+#jpa自动根据注解生成表并使用import.sql文件导入测试数据 ，springboot 使用data.sql初始化数据，schemea.sql初始化表格,默认是classpath下，sql文件下的是备份，不起作用
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.hibernate.generate-ddl=true
 spring.jpa.hibernate.open-in-view=true
 spring.jackson.serialization.indent_output=true
+#spring.datasource.initialize=false则哪个位置都不会被处理
+#spring.datasource.schema指定启动后执行的sql文件位置，spring.datasource.data设置数据的位置
 # cache
 spring.cache.type=EHCACHE
 spring.cache.ehcache.config=classpath:ehcache.xml
