--- a/base/pom.xml
+++ b/base/pom.xml
@@ -14,6 +14,8 @@
 	</parent>
 
 	<properties>
+		<!--跳过测试 -->
+		<skipTests>true</skipTests>
 		<shiro.version>1.2.4</shiro.version>
 		<java.version>1.8</java.version>
 	</properties>
@@ -156,6 +158,8 @@
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
+
+			<!-- 在Goals中输入：org.apache.maven.plugins:maven-jar-plugin:2.4:jar org.springframework.boot:spring-boot-maven-plugin:1.0.1.RELEASE:repackage -->
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
