--- a/base/src/main/resources/application.properties
+++ b/base/src/main/resources/application.properties
@@ -46,7 +46,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.jadira.usertype.autoRegisterUserTypes=true
 #create 等等只对jpa有效
 #jpa自动根据注解生成表并使用import.sql文件导入测试数据 ，springboot 使用data.sql初始化数据，schemea.sql初始化表格,默认是classpath下，sql文件下的是备份，不起作用
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.generate-ddl=true
 spring.jpa.hibernate.open-in-view=true
 spring.jackson.serialization.indent_output=true
